sass/custom/_styles.scss
// This File is imported last, and will override other styles in the cascade
// Add styles here to make changes without digging in too much

@import "_typography.scss"; 

a > code {
  @include link-colors($link-color, $hover: $link-color-hover, $focus: $link-color-hover, $visited: $link-color-visited, $active: $link-color-active);
}

header[role="banner"] {
  background-image: url('/images/banner.png');
  background-repeat: no-repeat;
  background-position: right;
  height: 170px;
  padding-top: 0;
  padding-bottom: 0;
  position: relative;
}

hgroup {
  position: absolute;
  top: 0;
  bottom: 0;
  height: 40%;
  margin-top: auto;
  margin-bottom: auto;
}

hgroup > h2 {
  padding-left: 1em;
}

article h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
}

h1.entry-title {
  font-weight: bold;
}

